# EncoderBoard

template-project/: .cproject  .mxproject  CMakeLists.txt  compile_commands.json  template-project Debug.launch
template-project/Core/Inc/: main.h  stm32h7xx_hal_conf.h  stm32h7xx_it.h
template-project/Core/Src/: main.cpp  stm32h7xx_hal_msp.c  stm32h7xx_it.c  template-project.code-workspace
template-project/Core/Src/Runes/: Runes.hpp
template-project/Debug/: makefile  objects.mk  sources.mk
template-project/Debug/Core/Src/: main.d  main.su  stm32h7xx_hal_msp.d  stm32h7xx_hal_msp.su  stm32h7xx_it.su  subdir.mk  syscalls.d  sysmem.d
template-project/Debug/Core/Startup/: subdir.mk
template-project/Debug/Drivers/STM32H7xx_HAL_Driver/Src/: stm32h7xx_hal.d  stm32h7xx_hal_adc.d  stm32h7xx_hal_dma_ex.d  stm32h7xx_hal_flash_ex.d  stm32h7xx_hal_fmac.d  stm32h7xx_hal_gpio.d  stm32h7xx_hal_hsem.d  stm32h7xx_hal_i2c.d  stm32h7xx_hal_pwr.d  stm32h7xx_hal_pwr_ex.d  stm32h7xx_hal_rcc.d  stm32h7xx_hal_rtc_ex.d  stm32h7xx_hal_spi.d  stm32h7xx_hal_tim_ex.d  subdir.mk
template-project/Debug/LWIP/App/: lwip.d  lwip.su  subdir.mk
template-project/Drivers/BSP/Components/lan8742/: lan8742.c
template-project/LWIP/App/: lwip.c
template-project/Release/: makefile  objects.list  sources.mk
template-project/Release/Core/Src/: stm32h7xx_hal_msp.su  stm32h7xx_it.d  stm32h7xx_it.su  subdir.mk  syscalls.d  sysmem.d  system_stm32h7xx.d  system_stm32h7xx.su
template-project/Release/Core/Startup/: subdir.mk
template-project/Release/LWIP/App/: lwip.d  lwip.su  subdir.mk
(+32 files in other folders)
